crates/php-parser/tests/snapshots/integration__interface_multiple_extends.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
interface ReadWrite extends Readable, Writable {
    public function flush(): void;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Interface": {
          "name": "ReadWrite",
          "extends": [
            {
              "parts": [
                "Readable"
              ],
              "kind": "Unqualified",
              "span": {
                "start": 34,
                "end": 42
              }
            },
            {
              "parts": [
                "Writable"
              ],
              "kind": "Unqualified",
              "span": {
                "start": 44,
                "end": 53
              }
            }
          ],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "flush",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "void"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 84,
                          "end": 88
                        }
                      }
                    },
                    "span": {
                      "start": 84,
                      "end": 88
                    }
                  },
                  "body": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 59,
                "end": 90
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 91
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 91
  }
}
