crates/php-parser/tests/snapshots/integration__invalid_abstract_final_class.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php abstract final class Foo {}
=== errors ===
expected 'class', found 'final'
=== snapshot ===
{
  "stmts": [
    {
      "kind": "Error",
      "span": {
        "start": 6,
        "end": 15
      }
    },
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": true,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 21,
        "end": 33
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 33
  }
}
