crates/php-parser/tests/snapshots/integration__invalid_eof_unclosed_array_call.snap
---
source: crates/php-parser/tests/integration.rs
assertion_line: 121
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php
$x = array(1, 2,

=== errors ===
expected expression
expected ')', found end of file
expected ';' after expression
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 17,
                          "end": 18
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 17,
                        "end": 18
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 2
                        },
                        "span": {
                          "start": 20,
                          "end": 21
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 20,
                        "end": 21
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": "Error",
                        "span": {
                          "start": 23,
                          "end": 23
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 23,
                        "end": 23
                      }
                    }
                  ]
                },
                "span": {
                  "start": 11,
                  "end": 23
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 23
          }
        }
      },
      "span": {
        "start": 6,
        "end": 23
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 23
  }
}
