crates/php-parser/tests/snapshots/integration__invalid_eof_unclosed_class.snap
---
source: crates/php-parser/tests/integration.rs
assertion_line: 121
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php
class Foo {
    public function bar() {

=== errors ===
expected '}', found end of file
expected '}', found end of file
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "bar",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": null,
                  "body": [],
                  "attributes": []
                }
              },
              "span": {
                "start": 22,
                "end": 46
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 46
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 46
  }
}
