crates/php-parser/tests/snapshots/integration__invalid_eof_unclosed_if.snap
---
source: crates/php-parser/tests/integration.rs
assertion_line: 121
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php
if ($x > 1) {
    echo "hello";

=== errors ===
unclosed ''}'' opened at Span { start: 18, end: 19 }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Binary": {
                "left": {
                  "kind": {
                    "Variable": "x"
                  },
                  "span": {
                    "start": 10,
                    "end": 12
                  }
                },
                "op": "Greater",
                "right": {
                  "kind": {
                    "Int": 1
                  },
                  "span": {
                    "start": 15,
                    "end": 16
                  }
                }
              }
            },
            "span": {
              "start": 10,
              "end": 16
            }
          },
          "then_branch": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Echo": [
                      {
                        "kind": {
                          "String": "hello"
                        },
                        "span": {
                          "start": 29,
                          "end": 36
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 24,
                    "end": 38
                  }
                }
              ]
            },
            "span": {
              "start": 18,
              "end": 38
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 38
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 38
  }
}
